--- a/src/style/less/style.less
+++ b/src/style/less/style.less
@@ -1,3 +1,23 @@
-.App-header{
-  background: white;
+@import '../BasicSet';
+
+.App_header{
+  background: @white;
+  position: relative;
+  padding: 1em 10em;
+  height: 50px;
+
+  .nav-item{
+    float: right;
+    vertical-align: middle;
+    padding: 1em 2em;
+    display: inline-block;
+  }
+}
+
+.App_body{
+  display: block;
+  background: @blue;
+  width: 100%;
+  height: 100px;
+  padding: 2em 10em;
 }
