--- a/src/style/BasicSet.less
+++ b/src/style/BasicSet.less
@@ -5,12 +5,5 @@
 @size1: 2.5rem;
 @size2: 2rem;
 
-@green: #05c46b;
-@blue: #0fbcf9;
-@violet: #3c40c6;
-@red: #ff3f34;
-@gray: #808e9b;
-@yellow: #ffdd59;
-@orange: #ffc048;
-@black: #1e272e;
+@blue: #0E38B1;
 @white: white;
