--- a/src/style/less/style.less
+++ b/src/style/less/style.less
@@ -1,23 +1,19 @@
 @import '../BasicSet';
 
-.App_header{
-  background: @white;
-  position: relative;
-  padding: 1em 10em;
+.Header{
+  display: block;
   height: 50px;
+  width: 100%;
 
-  .nav-item{
-    float: right;
-    vertical-align: middle;
-    padding: 1em 2em;
-    display: inline-block;
+  .logo{
+    width: 8em;
+    margin: 0.5em 0 0 1em;
+
   }
 }
 
-.App_body{
+.Body{
   display: block;
-  background: @blue;
   width: 100%;
-  height: 100px;
-  padding: 2em 10em;
+  height: 100%;
 }
