--- a/src/style/less/style.less
+++ b/src/style/less/style.less
@@ -1,19 +1,31 @@
 @import '../BasicSet';
 
+html{
+    width: 100%;
+    height: 100%;
+}
+body{
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
 .Header{
   display: block;
   height: 50px;
   width: 100%;
 
-  .logo{
-    width: 8em;
-    margin: 0.5em 0 0 1em;
-
-  }
+    . goHome{
+        display: inline-block;
+    }
+    .logo{
+        width: 8em;
+        margin: 0.5em 0 0 1em;
+    }
 }
 
-.Body{
-  display: block;
-  width: 100%;
-  height: 100%;
+.nav{
+    li{
+        display: inline-block;
+    }
 }
